loan case inquiry design fix

--- a/src/app/modules/journal-voucher/jv-form/jv-form.component.html
+++ b/src/app/modules/journal-voucher/jv-form/jv-form.component.html
@@ -230,7 +230,7 @@
                         <!-- <mat-error *ngIf="hasError('LoanDisbID', 'required')">Disbursement ID <strong>required</strong></mat-error> -->
                     </mat-form-field>
                     <span style="color: #01671B;" class="cursor-pointer mx-4" id="llcInquiryText" *ngIf="!viewOnly"
-                          (click)="viewLLCInquiryGL()"><b>View LC Inquiry</b></span>
+                          (click)="viewLLCInquiryGL()"><b class="underline">View LC Inquiry</b></span>
                 </div>
             </div>
 
