--- a/src/app/modules/loan-recovery/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recovery/loan-inquiry/loan-inquiry.component.html
@@ -677,7 +677,7 @@
                                     <table class="table table-striped"
                                            *ngIf="dynamicList.GetDisbursementsRecoveries.length>0">
                                         <thead>
-                                        <tr class="table-header-background">
+                                        <tr class="table-header-background dis-table">
                                             <th>GL</th>
                                             <th>SCM</th>
                                             <th>CRP</th>
@@ -690,7 +690,7 @@
                                             <th>Other Charges</th>
                                             <th>Legal Charges</th>
                                             <th>SAM Cost of Fund (OS)</th>
-                                            <th>SAM Cost of Fund (Rec)</th>
+                                            <th >SAM Cost of Fund (Rec)</th>
                                             <th>Balance</th>
                                             <th>W.Off</th>
                                             <th>REMIS</th>
