--- a/src/app/modules/loan-utilization/view-file/view-file.component.html
+++ b/src/app/modules/loan-utilization/view-file/view-file.component.html
@@ -14,7 +14,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <img class="images " style="width: 100%; height: 89vh;" [src]="url" id="image"/>
+            <img class="images zoom-images" style="width: 100%; height: 89vh;" [src]="url" id="image"/>
             <button mat-icon-button (click)="rotate()" color="primary">
                 <mat-icon>rotate_right</mat-icon>
                 Rotate
