--- a/src/app/modules/loan-recovery/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recovery/loan-inquiry/loan-inquiry.component.html
@@ -68,49 +68,48 @@
         <div class="flex flex-auto  overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="flex flex-col flex-auto sm:mb-4  overflow-x-hidden sm:overflow-y-auto">
 
-                <!--                ******************* Commented out as per requirement ******************************      -->
-                <!--                <div class="form-group kt-form__group row" *ngIf="dataFetched==true && dataFound && dataFound">-->
+                <div class="form-group kt-form__group row" *ngIf="dataFetched==true && dataFound && dataFound">
 
-                <!--                    <div class="col-lg-12">-->
-                <!--                        <div class="table-responsive">-->
-                <!--                            <table class="table table-striped">-->
-                <!--                                <thead>-->
-                <!--                                <tr class="table-header-background">-->
-                <!--                                    <th>Branch</th>-->
-                <!--                                    <th>Circle #</th>-->
-                <!--                                    <th>LC #</th>-->
-                <!--                                    <th>LC Auto#</th>-->
-                <!--                                    <th>LA File/Booklet#</th>-->
-                <!--                                    <th>Application Date</th>-->
-                <!--                                    <th>Status</th>-->
-                <!--                                    <th>Status (Post Sanction)</th>-->
-                <!--                                    <th>Dev Amount</th>-->
-                <!--                                    <th>Prod Amount</th>-->
-                <!--                                    <th>DEPOSIT ACC#</th>-->
-                <!--                                    <th>Sanction Date</th>-->
-                <!--                                </tr>-->
-                <!--                                </thead>-->
-                <!--                                <tbody>-->
-                <!--                                <tr *ngFor="let item of dynamicList?.dtGetApplicationMain; let i = index;">-->
-                <!--                                    <td>{{item.BRANCHNAME}}</td>-->
-                <!--                                    <td>{{item.CIRCLE_CODE}}</td>-->
-                <!--                                    <td>{{item.LOAN_CASE_NO}}</td>-->
-                <!--                                    <td>{{item.LOAN_ACCOUNT_NO}}</td>-->
-                <!--                                    <td>{{item.APP_NUMBER_MANUAL}}</td>-->
-                <!--                                    <td>{{item.APP_DATE | date: 'dd-MM-yyyy'}}</td>-->
-                <!--                                    <td>{{item.STATUS_NAME}}</td>-->
-                <!--                                    <td>{{item.STAUS_NAME_PS}}</td>-->
-                <!--                                    <td>{{item.DEV_AMOUNT}}</td>-->
-                <!--                                    <td>{{item.PROD_AMOUNT}}</td>-->
-                <!--                                    <td>{{item.ACCOUNT_NO}}</td>-->
-                <!--                                    <td>{{item.SANCTION_DATE | date: 'dd-MM-yyyy'}}</td>-->
-                <!--                                </tr>-->
-                <!--                                </tbody>-->
-                <!--                            </table>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
+                    <div class="col-lg-12">
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr class="table-header-background">
+                                    <th>Branch</th>
+                                    <th>Circle #</th>
+                                    <th>LC #</th>
+                                    <th>LC Auto#</th>
+                                    <th>LA File/Booklet#</th>
+                                    <th>Application Date</th>
+                                    <th>Status</th>
+                                    <th>Status (Post Sanction)</th>
+                                    <th>Dev Amount</th>
+                                    <th>Prod Amount</th>
+                                    <th>DEPOSIT ACC#</th>
+                                    <th>Sanction Date</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr *ngFor="let item of dynamicList?.dtGetApplicationMain; let i = index;">
+                                    <td>{{item.BRANCHNAME}}</td>
+                                    <td>{{item.CIRCLE_CODE}}</td>
+                                    <td>{{item.LOAN_CASE_NO}}</td>
+                                    <td>{{item.LOAN_ACCOUNT_NO}}</td>
+                                    <td>{{item.APP_NUMBER_MANUAL}}</td>
+                                    <td>{{item.APP_DATE | date: 'dd-MM-yyyy'}}</td>
+                                    <td>{{item.STATUS_NAME}}</td>
+                                    <td>{{item.STAUS_NAME_PS}}</td>
+                                    <td>{{item.DEV_AMOUNT}}</td>
+                                    <td>{{item.PROD_AMOUNT}}</td>
+                                    <td>{{item.ACCOUNT_NO}}</td>
+                                    <td>{{item.SANCTION_DATE | date: 'dd-MM-yyyy'}}</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
 
-                <!--                </div>-->
+                </div>
 
                 <div class="form-group kt-form__group row" *ngIf="dataFetched==true && dataFound">
                     <div class="col-lg-12 my-3">
