Change in geo Fence

--- a/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
+++ b/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
@@ -42,7 +42,7 @@
                     <!--                               (markerClick)="gm.lastOpen?.close();-->
                     <!--                                gm.lastOpen = infoWindow;-->
                     <!--                                 // clickedMarker(i, infowindow)"-->
-                    <!--                               viewCircleFense()-->
+                    <!--                               viewCircleFence()-->
                     <!--                               [latitude]="m.lat" [longitude]="m.lng" [title]="m.BranchId">-->
 
                     <!--                       <agm-info-window #infowindow>-->
