--- a/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
+++ b/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
@@ -6,7 +6,7 @@
             <h3 class=" heading w-3/12">{{getTitle()}}</h3>
             <div class="w-9/12 text-end">
                 <button *ngIf="isEditBtnShown && _currentActivity.U" type="button" class="btn btn-primary"
-                        mat-raised-button color="primary" (click)="editCircleFense()"
+                        mat-raised-button color="primary" (click)="editCircleFence()"
                         [disabled]="viewLoading || submitted">
                     <mat-icon class="mr-2">edit</mat-icon>
                     Edit
