--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -5,7 +5,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-7 col-sm-12">
-            <div class="heading">Create Fense</div>
+            <div class="heading">Create Fence</div>
         </div>
         <div class="col-lg-5 col-sm-12 self-center mt-1">
             <p class="text-right">
