--- a/src/app/modules/loan-utilization/view-file/view-file.component.html
+++ b/src/app/modules/loan-utilization/view-file/view-file.component.html
@@ -14,11 +14,23 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <img class="images zoom-images" style="width: 100%; height: 89vh;" [src]="url" id="image"/>
+            <img class="images zoom-images" style="width: 100%; height: 89vh;" [src]="url" id="image"
+                 [ngStyle]="{
+                 transform: 'scale(' + scale / 100 + ')',
+                 'transform-origin': left + 'px ' + top + 'px'
+                 }"
+            />
             <button mat-icon-button (click)="rotate()" color="primary">
                 <mat-icon>rotate_right</mat-icon>
                 Rotate
             </button>
+
+            <div class="toolbar">
+                <input type="range" min="100" max="1000" [(ngModel)]="scale">
+                <!--        <p>Zoom X: {{ left }}</p>-->
+                <!--        <p>Zoom Y: {{ top }}</p>-->
+            </div>
+
         </div>
     </div>
 
