--- a/src/app/modules/loan-utilization/view-file/view-file.component.html
+++ b/src/app/modules/loan-utilization/view-file/view-file.component.html
@@ -26,6 +26,7 @@
             </button>
 
             <div class="toolbar">
+                <label>Zoom:</label>
                 <input type="range" min="100" max="1000" [(ngModel)]="scale">
                 <!--        <p>Zoom X: {{ left }}</p>-->
                 <!--        <p>Zoom Y: {{ top }}</p>-->
