--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -1,13 +1,13 @@
 <div class="pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading ">Zonal Chief</div>
     <div >
-        <form [formGroup]="options"> 
+        <form [formGroup]="options">
           <div class="row pt-2">
             <div class="col-lg-4">
               <mat-form-field  class="w-full" appearance="outline">
                 <mat-label>Date</mat-label>
                 <input matInput [matDatepicker]="picker">
-               
+
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
               </mat-form-field>
@@ -26,21 +26,21 @@
             </div>
           </div>
 
-      
 
-      
+
+
 
         </form>
       </div>
     <!-- Main -->
     <div class="flex flex-auto overflow-x-hidden overflow-y-scroll">
-  
+
       <!-- Products list -->
       <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
       <div class="row">
           <div  class="col-lg-6">
             <div class="shadow-sm border">
-              <div id="chart" class=" mt-0 py-3">
+              <div id="chart-zonal" class=" mt-0 py-3">
                 <apx-chart
                     [series]="chartOptions.series"
                     [chart]="chartOptions.chart"
@@ -88,7 +88,7 @@
               <div class="col-lg-6 table-responsive">
                 <p class="heading mb-2 text-lg">Disbursements</p>
                 <table class="table table-striped">
-          
+
                   <thead>
                     <tr class="table-header-background">
                       <th scope="col">Calendar Year Target</th>
@@ -113,7 +113,7 @@
                       <td>%age</td>
                     </tr>
                   </tbody>
-                </table> 
+                </table>
               </div>
               <div class="col-lg-6 table-responsive">
                 <p class="heading mb-2 text-lg">Recovery</p>
@@ -143,14 +143,14 @@
                           </tr>
                         </tbody>
                       </table>
-                            </div>  
+                            </div>
             </div>
 
                 <div class="row">
                 <div  class="col-lg-12 table-responsive">
                   <p class="heading mb-2 text-lg">Circle Wise within Allocated Branches</p>
                     <table class="table table-striped">
-                        
+
                         <thead>
                             <tr class="table-header-background" >
                             <th scope="col">Branch</th>
@@ -166,7 +166,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                           
+
                               <td></td>
                               <td></td>
                               <td></td>
@@ -178,7 +178,7 @@
                               <td></td>
                             </tr>
                             <tr>
-                             
+
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -284,5 +284,5 @@
                 </div>
             </div>
         </div>
-        
-  
+
+
