--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -154,8 +154,8 @@
                 <ng-container matColumnDef="View">
                     <th mat-header-cell *matHeaderCellDef>Actions</th>
                     <td mat-cell *matCellDef="let LocationHistories">
-                        <button mat-icon-button color="primary" (click)="view(LocationHistories)">
-                            <mat-icon title="View Vendor">visibility</mat-icon>
+                        <button mat-icon-button (click)="view(LocationHistories)">
+                            <mat-icon class="text-green" title="View Vendor">visibility</mat-icon>
                         </button>
                     </td>
                 </ng-container>
