--- a/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
+++ b/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
@@ -53,16 +53,18 @@
     </div>
 
     <!-- Main -->
-    <div class="mb-4 px-3 pt-3 ">
+    <div class="mb-4 px-3 ">
         <!-- CONTENT GOES HERE -->
         <div>
             <div class="form-group row" style="
                 min-width: max-content;
-                max-height: 60vh;
+            
                 overflow-y:scroll;
-            ">
+            "
+            id="canva"
+            >
                 <div
-                    class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile border shadow-xs rounded-sm bg-gray-50 px-3  mat-elevation-z8">
+                    class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile border shadow-xs rounded-sm bg-gray-50 px-2  mat-elevation-z8">
                     <div *ngIf="!isActivityStringValid">
                         <mat-error><strong>Please select any activity</strong></mat-error>
                     </div>
@@ -71,7 +73,7 @@
                         <div class="custom-accordion-head border-0" (click)="toggleAccordion(activity.ActivityID)"
                              style="cursor: pointer">
                             <div class="self-center ml-8">
-                                <span class="font-bold text-green">
+                                <span class=" text-base text-green">
                                     {{activity.ActivityName}}
                                 </span>
                             </div>
@@ -87,7 +89,7 @@
                         <div class="custom-accordion-body" id="{{'table_'+activity.ActivityID}}" style="display: none">
                             <table class="table table-responsive" style="display: inline-table !important;">
                                 <thead class="thead-light">
-                                <tr>
+                                <tr class="table-header-background">
                                     <th>Activity Name</th>
                                     <th>Activity URL</th>
                                     <th>Create</th>
@@ -122,10 +124,10 @@
                 </div>
 
             </div>
-            <div class="row py-3 ">
-                <div class="col-lg-12 mb-4">
-                    <button style="background-color: #01671B;" type="button" *ngIf="!ShowButton" color="primary"
-                            class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+            <div class="row py-2 ">
+                <div class="col-lg-12 p-0 mb-4">
+                    <button  type="button" *ngIf="!ShowButton" color="primary"
+                            class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-green"
                             (click)="onSubmit()"
                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                             [disabled]="viewLoading || submitted">
