--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -61,7 +61,7 @@
                                     <mat-option value="">
                                         Select
                                     </mat-option>
-                                    <mat-option *ngFor="let obj of tourPlanStatusLov.LOVs" [value]="obj.Value">
+                                    <mat-option *ngFor="let obj of tourPlanStatusLov?.LOVs" [value]="obj.Value">
                                         {{obj.Name}}
                                     </mat-option>
                                 </mat-select>
