--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -143,16 +143,16 @@
                         </button>
                         <button  mat-icon-button *ngIf="checkViewStatus(VillageBenchMark)"
                                 color="primary" (click)="viewVillageBenchMark(VillageBenchMark)">
-                            <mat-icon title="edit benchmarking">visibility</mat-icon>
+                            <mat-icon title="view benchmarking">visibility</mat-icon>
                         </button>
                         <button  mat-icon-button *ngIf="checkDeleteStatus(VillageBenchMark)"
                                 color="primary" (click)="deleteVillageBenchMark(VillageBenchMark)">
-                            <mat-icon title="Delete benchmarking">delete</mat-icon>
+                            <mat-icon title="delete benchmarking">delete</mat-icon>
                         </button>
 
                         <button  mat-icon-button *ngIf="checkMap(VillageBenchMark)" color="primary"
                                 (click)="viewMap(VillageBenchMark)">
-                            <mat-icon title="view benchmarking">location_on</mat-icon>
+                            <mat-icon title="view location of benchmarking">location_on</mat-icon>
                         </button>
                     </div>
 
