--- a/src/app/layout/common/user/user.component.html
+++ b/src/app/layout/common/user/user.component.html
@@ -26,13 +26,13 @@
     #userActions="matMenu" 
     class="shadow">
     <button mat-menu-item>
-        <span class="flex flex-col leading-none ">
-            <span class="mt-1.5 text-md font-bold text-green">{{user?.DisplayName}}</span>
-             <span class="mt-1.5 text-sm">PPNo. :{{user?.UserName}}</span>
+        <span class="flex flex-col leading-none py-2 ">
+            <span class=" text-md font-bold text-green">{{user?.DisplayName}}</span>
+             <span class=" mt-1.5 text-sm">PPNo. :{{user?.UserName}}</span>
             <!--            <span class="mt-1.5 text-md font-medium">Branch Name :{{user?.BranchName}}</span>-->
         </span>
     </button>
-    <mat-divider class="mt-2 mb-0"></mat-divider>
+    <mat-divider class="m-0"></mat-divider>
     <!--    <button mat-menu-item>-->
     <!--        <mat-icon [svgIcon]="'heroicons_outline:user-circle'"></mat-icon>-->
     <!--        <span>Profile</span>-->
