--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -123,7 +123,8 @@
     </div>
 
     <!-- Header -->
-    <div class="">
+    <div  class="flex flex-auto border shadow-xs rounded-sm bg-gray-50"
+    style="flex-direction: column; overflow-y: scroll">
         <!-- <div
             class="absolute inset-x-0 bottom-0">
             <mat-progress-bar [mode]="'indeterminate'" *ngIf="!loaded"></mat-progress-bar>
@@ -200,11 +201,11 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Actions">
-                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-header-cell  *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell mat-cell *matCellDef="let vendor">
+                        <div class="flex" style="flex-wrap:wrap; width: 220px;">
                         <button
                             mat-icon-button
-                            color="primary"
                             (click)="viewVendor(vendor)"
                         >
                             <mat-icon title="View Vendor" color="primary"
@@ -215,11 +216,10 @@
 
                         <button
                             mat-icon-button
-                            color="primary"
                             *ngIf="editDeleteStatus(vendor)"
                             (click)="editVendor(vendor)"
                         >
-                            <mat-icon title="View Vendor">edit</mat-icon>
+                            <mat-icon title="View Vendor" color="primary">edit</mat-icon>
                         </button>
 
                         <button
@@ -233,10 +233,11 @@
                             >
                         </button>
 
-                        <button style="margin-left: 5px" mat-icon-button *ngIf="checkMap(vendor)" color="primary"
+                        <button  mat-icon-button *ngIf="checkMap(vendor)"
                                 (click)="viewMap(vendor)">
-                            <mat-icon title="view Vendor Location">location_on</mat-icon>
+                            <mat-icon title="view Vendor Location" color="primary">location_on</mat-icon>
                         </button>
+                    </div>
                     </mat-cell>
                 </ng-container>
 
@@ -255,39 +256,40 @@
             <!--                Please wait....-->
             <!--            </div>-->
 
-            <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
-                Items per page:
-                <mat-select
-                    display="inline"
-                    [(value)]="itemsPerPage"
-                    (valueChange)="paginate(1, $event)"
-                    style="
-                        width: 50px;
-                        margin-left: 15px;
-                        display: inline-block;
-                        margin-right: 10px;
-                    "
-                >
-                    <mat-option [value]="5">5</mat-option>
-                    <mat-option [value]="10">10</mat-option>
-                    <mat-option [value]="25">25</mat-option>
-                    <mat-option [value]="50">50</mat-option>
-                </mat-select>
-                <button (click)="paginate(1)">First</button>
-                <pagination-controls
-                    display="inline"
-                    (pageChange)="paginate($event)"
-                    style="display: inline-block"
-                ></pagination-controls>
-                <button
-                    (click)="paginate(Math.ceil(totalItems / itemsPerPage))"
-                >
-                    Last
-                </button>
-                <p style="float: right">
-                    Total <b>{{ totalItems }}</b> items
-                </p>
-            </div>
+
         </div>
+    </div>
+    <div *ngIf="matTableLenght" class="mat-select" style="padding: 5px">
+        Items per page:
+        <mat-select
+            display="inline"
+            [(value)]="itemsPerPage"
+            (valueChange)="paginate(1, $event)"
+            style="
+                width: 50px;
+                margin-left: 15px;
+                display: inline-block;
+                margin-right: 10px;
+            "
+        >
+            <mat-option [value]="5">5</mat-option>
+            <mat-option [value]="10">10</mat-option>
+            <mat-option [value]="25">25</mat-option>
+            <mat-option [value]="50">50</mat-option>
+        </mat-select>
+        <button (click)="paginate(1)">First</button>
+        <pagination-controls
+            display="inline"
+            (pageChange)="paginate($event)"
+            style="display: inline-block"
+        ></pagination-controls>
+        <button
+            (click)="paginate(Math.ceil(totalItems / itemsPerPage))"
+        >
+            Last
+        </button>
+        <p style="float: right">
+            Total <b>{{ totalItems }}</b> items
+        </p>
     </div>
 </div>
