--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -8,7 +8,7 @@
       <div class="row">
           <div  class="col-lg-6 col-sm-12 my-2  ">
             <div class="shadow-sm border">
-              <div id="chart" class=" mt-0 py-3  ">
+              <div id="chart" class=" mt-0 py-3  " *ngIf="chartOptions1">
                 <p class="text-green px-2 font-bold mb-0">Performance Indicators</p>
                   <apx-chart
                     [series]="chartOptions1.series"
@@ -23,7 +23,7 @@
           </div>
           <div  class="col-lg-6 col-sm-12 my-2">
             <div class="shadow-sm border">
-              <div id="chart" class=" mt-0 py-3">
+              <div id="chart" class=" mt-0 py-3" *ngIf="chartOptions2">
                 <p class="text-green px-2 font-bold mb-0">Circle Bench Mark</p>
                   <apx-chart
                     [series]="chartOptions2.series"
@@ -41,7 +41,7 @@
           <div class="row">
           <div  class="col-lg-6 col-sm-12 my-2">
             <div class="shadow-sm border">
-              <div id="chart"  class="mt-0 py-3">
+              <div id="chart"  class="mt-0 py-3" *ngIf="chartOptions2">
                 <p class="text-green px-2 font-bold mb-0">Loan Portfolio</p>
                   <apx-chart
                     [series]="chartOptions3.series"
@@ -61,86 +61,56 @@
           <div  class="col-lg-4 table-responsive">
             <p class="heading mb-2 text-lg">Disbursement</p>
             <table class="table  table-striped">
-                <thead>
+                <!-- <thead>
                   <tr class="table-header-background">
                     <th scope="col">#</th>
                     <th scope="col">First</th>
                     <th scope="col">Last</th>
                   </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
+                </thead> -->
+                <tbody >
+                  <tr *ngFor="let item of  DisbursmentAchievement">
+                    <td>{{item[0]}}</td>
+                    <td>{{item[1]}}</td>
                   </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                  </tr>
+                 
+                 
                 </tbody>
               </table>
           </div>
           <div  class="col-lg-4  table-responsive">
             <p class="heading mb-2 text-lg">Recovery</p>
             <table class="table  table-striped">
-                <thead>
+                <!-- <thead>
                   <tr class="table-header-background">
                     <th scope="col">#</th>
                     <th scope="col">First</th>
                     <th scope="col">Last</th>
                   </tr>
-                </thead>
+                </thead> -->
                 <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
+                  <tr *ngFor="let item of  RecoveryAchievement">
+                    <td>{{item[0]}}</td>
+                    <td>{{item[1]}}</td>
                   </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                  </tr>
+                 
                 </tbody>
               </table>
           </div>
           <div  class="col-lg-4   table-responsive">
             <p class="heading mb-2 text-lg">Utilization/Mutations</p>
             <table class="table  table-striped">
-                <thead>
+                <!-- <thead>
                   <tr class="table-header-background">
                     <th scope="col">#</th>
                     <th scope="col">First</th>
                     <th scope="col">Last</th>
                   </tr>
-                </thead>
+                </thead> -->
                 <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
+                  <tr *ngFor="let item of  UtilizationMutation">
+                    <td>{{item[0]}}</td>
+                    <td>{{item[1]}}</td>
                   </tr>
                 </tbody>
               </table>
