Index html modified

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -39,7 +39,9 @@
         <mat-tab label="President ZTBL">
             <app-president-ztbl></app-president-ztbl>
         </mat-tab>
-        <mat-tab label="Regional Chief"> <app-regional-cheif></app-regional-cheif></mat-tab>
+        <mat-tab label="Regional Chief">
+            <app-regional-cheif></app-regional-cheif>
+        </mat-tab>
     </mat-tab-group>
 
 
