--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -207,11 +207,11 @@
                     <tr class="table-header-background text-center">
                         <th>Circle Code</th>
                         <th>Village Name</th>
-                        <th>No Of Formaer</th>
+                        <th>No of Farmer</th>
                         <th>Farm Size</th>
                         <th>Male Count</th>
                         <th>Female Count</th>
-                        <th>TransGenderCount</th>
+                        <th>Transgender Count</th>
                         <th>Average Loan Size</th>
                         <th>Agri Business Potential</th>
                         <th>Action</th>
