--- a/src/app/modules/customer/correction-passbook/correction-passbook.component.html
+++ b/src/app/modules/customer/correction-passbook/correction-passbook.component.html
@@ -52,14 +52,16 @@
 
 
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
+    <div class="relative flex overflow-x-hidden  flex-col sm:flex-row flex-0 sm:items-center sm:justify-between px-6 md:px-8"
          style="flex-wrap: wrap">
     </div>
-    <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
+    <div class="flex flex-auto border 
+    overflow-x-hidden"
+    style="flex-direction: column; overflow-y: auto">
 
             <div *ngIf="afterFind" class="kt-portlet__head kt-portlet__head__custom" id="list-header">
                 <div class="kt-portlet__head-label">
-                    <h5 class="kt-portlet__head-title">Customer Information</h5>
+                    <h5 class="sub-heading mb-0">Customer Information</h5>
                 </div>
             </div>
 
@@ -91,7 +93,7 @@
 
             <div *ngIf="searchData" class="kt-portlet__head kt-portlet__head__custom" id="list-header">
                 <div class="kt-portlet__head-label">
-                    <h5 class="kt-portlet__head-title">Land Information</h5>
+                    <h5 class="sub-heading  mb-0">Land Information</h5>
                 </div>
             </div>
 
@@ -179,7 +181,7 @@
         <div *ngIf="searchData" class="form-group kt-form__group row mt-2 justify-content-center">
             <div class="row">
                 <div class="col-lg-12 text-right">
-                    <button mat-raised-button color="primary" (click)="submit()">
+                    <button mat-raised-button class="bg-green mat-flat-button mat-button-base mat-primary" (click)="submit()">
                         <mat-icon class="mr-2">check_circle</mat-icon>
                         Submit
                     </button>
