--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/remark-dialog/remark-dialog.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/remark-dialog/remark-dialog.component.html
@@ -42,14 +42,19 @@
 
 
 <form [formGroup]="remarkForm" class="kt-form kt-form--group-seperator-dashed h-screen">
-    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
-         style="background-color: #f6fcf8;">Enter Remarks
+  <div class="flex">
+    <div class="heading w-11/12">Enter Remarks
     </div>
+ <mat-icon [mat-dialog-close]="false" (click)="close(0)" class="mr-2 w-1/12 self-center text-red-500 place-content-end">cancel</mat-icon>
+  </div>
+
+
+
 
     <div class="kt-form">
         <div class="kt-portlet__body">
 
-            <div class="row">
+            <div class="row py-3">
                 <div class="col-lg-4 col-sm-12">
                     <mat-form-field class=" mat-form-field-fluid" appearance="outline">
                         <mat-label class="customMatLabel">Remarks:</mat-label>
@@ -64,16 +69,9 @@
         <div class="kt-form__actions kt-form__actions--solid  py-4 border-t">
             <div class="row text-right">
                 <div class="col-lg-12">
-                    <button type="button"
-                            class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                            mat-raised-button cdkFocusInitial
-                            value="Cancel" [mat-dialog-close]="false" (click)="close(0)">
-                        <mat-icon class="mr-2">cancel</mat-icon>
-                        Close
-                    </button>
-                    <button mat-raised-button color="primary" class="org-button" (click)="submit()">
-                        <mat-icon class="mr-2">save</mat-icon>
-                        Submit
+
+                    <button mat-raised-button class="bg-green mat-primary" (click)="submit()">
+                      <mat-icon class="mr-2">check_circle</mat-icon> Submit
                     </button>
                 </div>
             </div>
