--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -344,4 +344,22 @@
 
     </div>
 
+    <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card routerLink="customer-cwr" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+
+                <div class="d-grid" style="justify-items: center;">
+                    <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
+
+
+                    <p class=" text-black"
+                    >Customer CWR Inquiry</p>
+                </div>
+
+            </mat-card>
+        </div>
+
+    </div>
+
 </div>
