--- a/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
+++ b/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
@@ -120,18 +120,18 @@
                 </div>
 
 
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" *ngIf="Field">
-                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                        <mat-label class="customMatLabel"><em>No Record Found</em></mat-label>
-                        <input matInput placeholder="No Record Found" autocomplete="off" readonly="readonly"/>
-                    </mat-form-field>
-                </div>
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" *ngIf="Field">
-                    <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                        <mat-label class="customMatLabel"><em>No Record Found</em></mat-label>
-                        <input matInput placeholder="No Record Found" autocomplete="off" readonly="readonly"/>
-                    </mat-form-field>
-                </div>
+<!--                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" *ngIf="Field">-->
+<!--                    <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
+<!--                        <mat-label class="customMatLabel"><em>No Record Found</em></mat-label>-->
+<!--                        <input matInput placeholder="No Record Found" autocomplete="off" readonly="readonly"/>-->
+<!--                    </mat-form-field>-->
+<!--                </div>-->
+<!--                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" *ngIf="Field">-->
+<!--                    <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
+<!--                        <mat-label class="customMatLabel"><em>No Record Found</em></mat-label>-->
+<!--                        <input matInput placeholder="No Record Found" autocomplete="off" readonly="readonly"/>-->
+<!--                    </mat-form-field>-->
+<!--                </div>-->
 
             </div>
         </div>
