search loan uti

--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -170,7 +170,7 @@
                     </ng-container>
 
                     <ng-container matColumnDef="prodDevFlag">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>prod Dev Flag</mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Prod/Dev Flag</mat-header-cell>
                         <mat-cell *matCellDef="let loanutilization">{{loanutilization.prodDevFlag}}</mat-cell>
                     </ng-container>
 
