--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -25,7 +25,7 @@
 
 
                 </div>
-                <div class="col-lg-6 py-3">
+                <!-- <div class="col-lg-6 py-3">
                     <div class="shadow-sm border">
                         <div id="chart" class=" m-0 pt-2">
                             <apx-chart
@@ -38,7 +38,7 @@
                             ></apx-chart>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="row  justify-content-md-center">
 
@@ -78,12 +78,12 @@
                         </thead>
                         <tbody>
                         <tr *ngFor="let item of circlePositions">
-                            <th>{{item[0]}}</th>
-                            <td>{{item[1]}}</td>
-                            <td>{{item[2]}}</td>
-                            <td>{{item[3]}}</td>
-                            <td>{{item[4]}}</td>
-                            <td>{{item[5]}}</td>
+                            <th>{{item.Name}}</th>
+                            <td>{{item.TotalDisbursment}}</td>
+                            <td>{{item.TotalRecovery}}</td>
+                            <td>{{item.NplOS}}</td>
+                            <td>{{item.SamOS}}</td>
+                            <td>{{item.TotalOS}}</td>
                         </tr>
                         </tbody>
                     </table>
