--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -2,129 +2,127 @@
     <div class="heading">MCO Dashboard</div>
     <!-- Header -->
     <!-- Main -->
-  
-      <!-- Products list -->
-      <div class="flex flex-auto" style="flex-direction: column;">
-      <div class="row">
-          <div  class="col-lg-6 col-sm-12 my-2  ">
-            <div class="shadow-sm border">
-              <div id="chart" class=" mt-0 py-3  " *ngIf="chartOptions1">
-                <p class="text-green px-2 font-bold mb-0">Performance Indicators</p>
-                  <apx-chart
-                    [series]="chartOptions1.series"
-                    [chart]="chartOptions1.chart"
-                    [labels]="chartOptions1.labels"
-                    [theme]="chartOptions1.theme"
-                    [responsive]="chartOptions1.responsive"
-                  ></apx-chart>
+
+    <!-- Products list -->
+    <div class="flex flex-auto" style="flex-direction: column;">
+        <div class="row">
+            <div class="col-lg-6 col-sm-12 my-2  ">
+                <div class="shadow-sm border">
+                    <div id="chart" class=" mt-0 py-3  " *ngIf="chartOptions1">
+                        <p class="text-green px-2 font-bold mb-0">Performance Indicators</p>
+                        <apx-chart
+                            [series]="chartOptions1?.series"
+                            [chart]="chartOptions1?.chart"
+                            [labels]="chartOptions1?.labels"
+                            [theme]="chartOptions1?.theme"
+                            [responsive]="chartOptions1?.responsive"
+                        ></apx-chart>
+                    </div>
                 </div>
+
             </div>
-
-          </div>
-          <div  class="col-lg-6 col-sm-12 my-2">
-            <div class="shadow-sm border">
-              <div id="chart" class=" mt-0 py-3" *ngIf="chartOptions2">
-                <p class="text-green px-2 font-bold mb-0">Circle Bench Mark</p>
-                  <apx-chart
-                    [series]="chartOptions2.series"
-                    [chart]="chartOptions2.chart"
-                    [labels]="chartOptions2.labels"
-                    [theme]="chartOptions2.theme"
-                    [responsive]="chartOptions2.responsive"
-                  ></apx-chart>
+            <div class="col-lg-6 col-sm-12 my-2">
+                <div class="shadow-sm border">
+                    <div id="chart" class=" mt-0 py-3" *ngIf="chartOptions2">
+                        <p class="text-green px-2 font-bold mb-0">Circle Bench Mark</p>
+                        <apx-chart
+                            [series]="chartOptions2?.series"
+                            [chart]="chartOptions2?.chart"
+                            [labels]="chartOptions2?.labels"
+                            [theme]="chartOptions2?.theme"
+                            [responsive]="chartOptions2?.responsive"
+                        ></apx-chart>
+                    </div>
                 </div>
+
+
             </div>
-
-
-          </div>
-          </div>
-          <div class="row">
-          <div  class="col-lg-6 col-sm-12 my-2">
-            <div class="shadow-sm border">
-              <div id="chart"  class="mt-0 py-3" *ngIf="chartOptions2">
-                <p class="text-green px-2 font-bold mb-0">Loan Portfolio</p>
-                  <apx-chart
-                    [series]="chartOptions3.series"
-                    [chart]="chartOptions3.chart"
-                    [labels]="chartOptions3.labels"
-                    [theme]="chartOptions3.theme"
-                    [responsive]="chartOptions3.responsive"
-                  ></apx-chart>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 col-sm-12 my-2">
+                <div class="shadow-sm border">
+                    <div id="chart" class="mt-0 py-3" *ngIf="chartOptions2">
+                        <p class="text-green px-2 font-bold mb-0">Loan Portfolio</p>
+                        <apx-chart
+                            [series]="chartOptions3?.series"
+                            [chart]="chartOptions3?.chart"
+                            [labels]="chartOptions3?.labels"
+                            [theme]="chartOptions3?.theme"
+                            [responsive]="chartOptions3?.responsive"
+                        ></apx-chart>
+                    </div>
                 </div>
-          </div>
 
-          </div>
+            </div>
 
         </div>
- 
-        <div class="row ">
-          <div  class="col-lg-4 table-responsive">
-            <p class="heading mb-2 text-lg">Disbursement</p>
-            <table class="table  table-striped">
-                <!-- <thead>
-                  <tr class="table-header-background">
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                  </tr>
-                </thead> -->
-                <tbody >
-                  <tr *ngFor="let item of  DisbursmentAchievement">
-                    <td>{{item[0]}}</td>
-                    <td>{{item[1]}}</td>
-                  </tr>
-                 
-                 
-                </tbody>
-              </table>
-          </div>
-          <div  class="col-lg-4  table-responsive">
-            <p class="heading mb-2 text-lg">Recovery</p>
-            <table class="table  table-striped">
-                <!-- <thead>
-                  <tr class="table-header-background">
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                  </tr>
-                </thead> -->
-                <tbody>
-                  <tr *ngFor="let item of  RecoveryAchievement">
-                    <td>{{item[0]}}</td>
-                    <td>{{item[1]}}</td>
-                  </tr>
-                 
-                </tbody>
-              </table>
-          </div>
-          <div  class="col-lg-4   table-responsive">
-            <p class="heading mb-2 text-lg">Utilization/Mutations</p>
-            <table class="table  table-striped">
-                <!-- <thead>
-                  <tr class="table-header-background">
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                  </tr>
-                </thead> -->
-                <tbody>
-                  <tr *ngFor="let item of  UtilizationMutation">
-                    <td>{{item[0]}}</td>
-                    <td>{{item[1]}}</td>
-                  </tr>
-                </tbody>
-              </table>
-          </div>
-          </div>
-      </div>
-   
 
-  
-  </div>
-  
-  
-  
-  
-  
-  
-  
+        <div class="row ">
+            <div class="col-lg-4 table-responsive">
+                <p class="heading mb-2 text-lg">Disbursement</p>
+                <table class="table  table-striped">
+                    <!-- <thead>
+                      <tr class="table-header-background">
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                      </tr>
+                    </thead> -->
+                    <tbody>
+                    <tr *ngFor="let item of  DisbursmentAchievement">
+                        <td>{{item[0]}}</td>
+                        <td>{{item[1]}}</td>
+                    </tr>
+
+
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-lg-4  table-responsive">
+                <p class="heading mb-2 text-lg">Recovery</p>
+                <table class="table  table-striped">
+                    <!-- <thead>
+                      <tr class="table-header-background">
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                      </tr>
+                    </thead> -->
+                    <tbody>
+                    <tr *ngFor="let item of  RecoveryAchievement">
+                        <td>{{item[0]}}</td>
+                        <td>{{item[1]}}</td>
+                    </tr>
+
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-lg-4   table-responsive">
+                <p class="heading mb-2 text-lg">Utilization/Mutations</p>
+                <table class="table  table-striped">
+                    <!-- <thead>
+                      <tr class="table-header-background">
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                      </tr>
+                    </thead> -->
+                    <tbody>
+                    <tr *ngFor="let item of  UtilizationMutation">
+                        <td>{{item[0]}}</td>
+                        <td>{{item[1]}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
+
+
+
+
+
