--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -13,12 +13,12 @@
                     <div class="shadow-sm border">
                         <div id="chart" class=" m-0 pt-2">
                             <apx-chart
-                                [series]="chartOptions.series"
-                                [chart]="chartOptions.chart"
-                                [labels]="chartOptions.labels"
-                                [title]="chartOptions.title"
-                                [theme]="chartOptions.theme"
-                                [responsive]="chartOptions.responsive"
+                                [series]="chartOptions?.series"
+                                [chart]="chartOptions?.chart"
+                                [labels]="chartOptions?.labels"
+                                [title]="chartOptions?.title"
+                                [theme]="chartOptions?.theme"
+                                [responsive]="chartOptions?.responsive"
                             ></apx-chart>
                         </div>
                     </div>
@@ -29,12 +29,12 @@
                     <div class="shadow-sm border">
                         <div id="chart" class=" m-0 pt-2">
                             <apx-chart
-                                [series]="chartOptions.series"
-                                [chart]="chartOptions.chart"
-                                [labels]="chartOptions.labels"
-                                [title]="chartOptions.title"
-                                [theme]="chartOptions.theme"
-                                [responsive]="chartOptions.responsive"
+                                [series]="chartOptions?.series"
+                                [chart]="chartOptions?.chart"
+                                [labels]="chartOptions?.labels"
+                                [title]="chartOptions?.title"
+                                [theme]="chartOptions?.theme"
+                                [responsive]="chartOptions?.responsive"
                             ></apx-chart>
                         </div>
                     </div>
@@ -78,12 +78,12 @@
                         </thead>
                         <tbody>
                         <tr *ngFor="let item of circlePositions">
-                            <th>{{item.Name}}</th>
-                            <td>{{item.TotalDisbursment}}</td>
-                            <td>{{item.TotalRecovery}}</td>
-                            <td>{{item.NplOS}}</td>
-                            <td>{{item.SamOS}}</td>
-                            <td>{{item.TotalOS}}</td>
+                            <th>{{item?.Name}}</th>
+                            <td>{{item?.TotalDisbursment}}</td>
+                            <td>{{item?.TotalRecovery}}</td>
+                            <td>{{item?.NplOS}}</td>
+                            <td>{{item?.SamOS}}</td>
+                            <td>{{item?.TotalOS}}</td>
                         </tr>
                         </tbody>
                     </table>
